--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
-body {
-  background-color: gold;
+:root {
+  --color-primary: #2584ff;
+  --color-secondary: #00d9ff;
+  --color-accent: #ff3400;
+  --color-heading: #210e6b;
+  --color-body: #f9fafb;
 }
