--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Colors */
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -5,6 +6,8 @@
   --color-heading: #1b0760;
   --color-body: #918ca4;
 }
+
+/* Typography */
 html {
   font-size: 62.5%;
 }
@@ -49,4 +52,32 @@ p {
   h3 {
     font-size: 2.4rem;
   }
+}
+
+/* Links */
+a {
+  text-decoration: none;
+}
+
+.link-arrow {
+  color: var(--color-accent);
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
+  }
+}
+
+.link-arrow::after {
+  content: "-->";
+  margin-left: 5px;
+  transition: margin 0.5s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 10px;
 }
