--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,35 @@ a {
 .link-arrow:hover::after {
   margin-left: 10px;
 }
+
+/* Badges */
+.badge {
+  border-radius: 20px;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background-color: var(--color-primary);
+}
+
+.badge--secondary {
+  background-color: var(--color-secondary);
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
+    font-size: 1.5rem;
+  }
+
+  .badge--small {
+    font-size: 1.2rem;
+  }
+}
