--- a/components/buttons.html
+++ b/components/buttons.html
@@ -3,6 +3,7 @@
   >Get Started<a />
 
   <button class="btn btn--accent">Get Started</button>
+  <button class="btn btn--accent">Search</button>
 
   <button class="btn btn--outline">Buy now</button></a
 >
