--- a/css/styles.css
+++ b/css/styles.css
@@ -281,3 +281,25 @@ a {
 .input-group .btn {
   margin: 3px;
 }
+
+/* Cards */
+.card {
+  box-shadow: 0 0 20px 10px #a2a2a2;
+  border-radius: 7px;
+  overflow: hidden;
+}
+
+.card__header,
+.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background-color: var(--color-primary);
+  color: white;
+}
+
+.card--secondary .card__header {
+  background-color: var(--color-secondary);
+  color: white;
+}
