--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ a {
 
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -142,12 +143,13 @@ a {
 .list--tick .list__item {
   margin-bottom: 1rem;
   padding-left: 0.5rem;
+  font-size: 2.4rem;
 }
 
 @media screen and (min-width: 1024px) {
   .list--tick .list__item {
-    margin-bottom: 2rem;
     padding-left: 0;
+    font-size: 1.8rem;
   }
 }
 
@@ -302,4 +304,70 @@ a {
 .card--secondary .card__header {
   background-color: var(--color-secondary);
   color: white;
+}
+
+.card--secondary .badge--secondary {
+  background-color: #02cdf1;
+}
+
+/* Plans */
+
+.plan__name {
+  color: white;
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.plan .list__item {
+  margin-bottom: 2rem;
+}
+
+.plan .card__header {
+  position: relative;
+}
+
+.plan .card__header::before {
+  content: url("../images/popular.svg");
+  display: inline-block;
+  width: 40px;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name {
+    font-size: 1.4rem;
+  }
+
+  .plan__price {
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
+    display: block;
+  }
 }
