feat: add Media component

--- a/css/styles.css
+++ b/css/styles.css
@@ -371,3 +371,19 @@ a {
     display: block;
   }
 }
+
+/* Media */
+.media {
+  display: flex;
+}
+
+.media__image {
+  padding-top: 1rem;
+}
+
+.media__title {
+  margin-top: 0;
+}
+.media__body {
+  margin: 0 2rem;
+}
