--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --color-accent: #ff3400;
   --color-heading: #1b0760;
   --color-body: #918ca4;
+  --color-body-darker: #5c5577;
   --color-border: #ccc;
   --border-radius: 3rem;
 }
@@ -386,4 +387,50 @@ a {
 }
 .media__body {
   margin: 0 2rem;
+}
+
+/* Quotes */
+.quote {
+  color: var(--color-body-darker);
+  font-size: 3rem;
+  font-style: italic;
+  line-height: 1.3;
+}
+
+.quote__text::before {
+  content: open-quote;
+}
+
+.quote__text::after {
+  content: close-quote;
+}
+
+.quote_author {
+  font-size: 3rem;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.quote__organization {
+  color: var(--color-heading);
+  font-size: 2rem;
+  font-style: normal;
+  opacity: 0.4;
+}
+
+.quote__line {
+  bottom: 10px;
+  position: relative;
+}
+
+@media screen and (min-width: 1024px) {
+  .quote {
+    font-size: 2rem;
+  }
+  .quote_author {
+    font-size: 2.4rem;
+  }
+  .quote__organization {
+    font-size: 1.6rem;
+  }
 }
