feat: add testimonials

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,10 @@ a {
   fill: var(--color-primary);
 }
 
+.icon--white {
+  fill: white;
+}
+
 .icon--small {
   width: 30px;
   height: 30px;
@@ -177,6 +181,10 @@ a {
   height: 64px;
   justify-content: center;
   width: 64px;
+}
+
+.icon-container--accent {
+  background-color: var(--color-accent);
 }
 
 /* Buttons */
@@ -405,7 +413,7 @@ a {
   content: close-quote;
 }
 
-.quote_author {
+.quote__author {
   font-size: 3rem;
   font-style: normal;
   font-weight: bold;
@@ -427,7 +435,7 @@ a {
   .quote {
     font-size: 2rem;
   }
-  .quote_author {
+  .quote__author {
     font-size: 2.4rem;
   }
   .quote__organization {
@@ -449,5 +457,37 @@ a {
 @media screen and (min-width: 1024px) {
   .grid--1x3 {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+/* Testimonials */
+
+.testimonial {
+  padding: 3rem;
+}
+
+.testimonial__image {
+  position: relative;
+}
+
+.testimonial__image > img {
+  width: 100%;
+}
+
+.testimonial__image > .icon-container {
+  position: absolute;
+  top: 3rem;
+  right: -32px;
+  fill: red;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial .quote,
+  .testimonial .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .testimonial .quote {
+    margin-left: 6rem;
   }
 }
