--- a/css/styles.css
+++ b/css/styles.css
@@ -570,3 +570,39 @@ a {
   max-height: 100vh;
   opacity: 1;
 }
+
+/* Blocks */
+.block {
+  --padding-vertical: 6rem;
+  padding: var(--padding-vertical) 2rem;
+}
+
+.block__header {
+  text-align: center;
+}
+.block--dark {
+  background-color: black;
+  color: #7b858b;
+}
+.block--dark .block__heading {
+  color: white;
+}
+
+.block__heading {
+  margin-top: 0;
+}
+
+.block--skewed-right {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 75%);
+}
+
+.block--skewed-left {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 0% 100%);
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
