--- a/components/hero.html
+++ b/components/hero.html
@@ -9,7 +9,15 @@
     </header>
     <!-- End First Column -->
     <!-- Second Column -->
-    <img class="hero__image" src="images/banner.png" alt="" />
+    <picture>
+      <source
+        type="image/webp"
+        srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
+      <source
+        type="image/png"
+        srcset="images/banner.png 1x, images/banner@2x.png 2x" />
+      <img class="hero__image" src="images/banner.png" alt=""
+    /></picture>
     <!-- End Second Column -->
   </div>
 </section>
