--- a/components/inputgroups.html
+++ b/components/inputgroups.html
@@ -1,3 +1,4 @@
+<!-- Input Group -->
 <div class="input-group">
   <span class="icon-container">
     <svg class="icon icon--primary">
@@ -19,3 +20,4 @@
     Search
   </button>
 </div>
+<!-- End Input Group -->
