fix: fix position bug in plan--popular

--- a/components/cards.html
+++ b/components/cards.html
@@ -1,4 +1,4 @@
-<!-- Card -->
+<!-- Card primary -->
 <div style="width: 50%; margin: 20px">
   <div class="card card--primary">
     <div class="card__header">Title</div>
@@ -10,7 +10,7 @@
     </div>
   </div>
 </div>
-<!-- End Card -->
+<!-- End Card primary -->
 <!-- Card -->
 <div style="width: 50%; margin: 20px"></div>
   <div class="card card--secondary">
